--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search Assistant</title>
+    <title>AI Search Assistant</title>
    <meta name="description" content="Get AI-powered answers with real-time web search and crawling. Fast and comprehensive search results.">
     <meta name="keywords" content="AI search, web search, search assistant, web crawling, AI answers">
     <meta name="author" content="Search Assistant">
